# automation-auditor

./: .env  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  setup_groq.ps1  test_judge_simple.py
audit/report_onpeer_generated/: audit_automaton-auditor.git_20260228_104437.md
audit/report_onself_generated/: audit_automation-auditor.git_20260227_094919.md  audit_automation-auditor.git_20260228_110904.md
rubric/: week2_rubric.json
src/: config.py  graph.py  state.py
src/config/: langchain_config.py  ollama_config.py
src/nodes/: detectives.py  judges.py  justice.py
src/tools/: doc_tools.py  repo_tools.py  vision_tools.py
tests/: test_groq.py  test_ollama.py
