# ============================================================
# BUILD SYSTEM
# ============================================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ============================================================
# PROJECT METADATA
# ============================================================
[project]
name = "automaton-auditor"
version = "1.0.0"
description = "Hierarchical LangGraph Agent Swarm for Autonomous Code Auditing"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Nahom Desalegn ", email = "makbeldesalegn@gmail.com"}
]
keywords = [
    "langgraph",
    "multi-agent",
    "code-audit",
    "llm",
    "autonomous-agents",
    "forensic-analysis"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

# ============================================================
# DEPENDENCIES (Matches your uploaded code)
# ============================================================
dependencies = [
    # LangGraph & LangChain (Core orchestration)
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    # LLM Providers (Your judges.py uses both)
    "langchain-groq>=0.1.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    # Observability (Required for LangSmith tracing)
    "langsmith>=0.1.0",
    # Data Validation (Your state.py uses Pydantic heavily)
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # Type Safety (Your state.py uses TypedDict with Annotated)
    "typing-extensions>=4.12.0",
    # PDF Processing (Your doc_tools.py tries all three)
    "pypdf>=4.3.0",
    "docling>=2.0.0",
    "pdfminer-six>=20231228",
    # Environment Variables (Your code uses .env)
    "python-dotenv>=1.0.0",
    # HTTP Client (For API calls)
    "httpx>=0.27.0",
    # Retry Logic (Recommended for LLM calls)
    "tenacity>=8.5.0",
    "langchain-groq>=1.1.2",
]

# ============================================================
# OPTIONAL DEPENDENCIES
# ============================================================
[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]

docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

# ============================================================
# PROJECT SCRIPTS (CLI Entry Point)
# ============================================================
[project.scripts]
auditor = "src.graph:main"

# ============================================================
# HATCH BUILD CONFIGURATION
# ============================================================
[tool.hatch.build.targets.wheel]
packages = ["src"]

# ============================================================
# PYTEST CONFIGURATION
# ============================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ============================================================
# RUFF LINTER CONFIGURATION
# ============================================================
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
known-third-party = ["langchain", "langgraph", "pydantic"]

# ============================================================
# MYPY TYPE CHECKER CONFIGURATION
# ============================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "docling.*",
    "pdfminer.*",
    "pypdf.*",
]
ignore_missing_imports = true

# ============================================================
# COVERAGE CONFIGURATION
# ============================================================
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# ============================================================
# UV CONFIGURATION (Fast Package Manager)
# ============================================================
[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
